--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -1,36 +1,94 @@
+
 *{
     margin:0px;
     padding:0px;
 }
 
 .grid-container{
-    /*background-color: 2A92E5;*/
     margin: 0;
 }
+
 .rmit-logo {
     height: 3em;
     vertical-align: middle;
     float: left;
-    margin-right: 1em;
+    margin-right: 1.5em;
     margin-left: 2em;
-    margin-top: 0.7em;
+    margin-top: 0.9em;
 }
 
 .weka-logo {
     height: 3em;
     vertical-align: middle;
     float: left;
-    /* margin-right: 2em; */
-    margin-top: 0.7em;
+    margin-right: 3em;
+    margin-top: 0.9em;
+}
+
+/*#text {*/
+/*    position: fixed;*/
+/*    font-family: Helvetica;*/
+/*    color: black;*/
+/*    !*margin-top: 3em;*!*/
+/*    !*margin-left: 4em;*!*/
+/*}*/
+
+.video {
+    overflow:hidden;
+    height: 350px;
+    box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
+}
+
+.video-content h1 {
+    position: fixed;
+    font-family: Helvetica;
+    color: white;
+    margin-top: 3em;
+    margin-left: 4em;
+}
+
+.file-upload {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.grid-container footer {
+    grid-area: footer;
+    background: rgb(55, 41, 185);
+}
+
+footer {
+    display: block;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+
+footer li {
+    display: inline-block;
+    padding: 1em 0.5em;
+    padding-left: 2em;
+}
+
+footer li a {
+    text-decoration: none;
+    font-family: Helvetica;
+    text-align: left;
+    color: white;
+}
+
+footer li a:hover {
+    color: rgb(211, 211, 211)
 }
 
 nav {
-    background: rgba(42, 146, 229, 1);
+    background: rgb(55, 41, 185);
     /* box-shadow: -1em; */
     margin-top: 0;
-    text-align: center;
+    text-align: left;
+    box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
 }
-
 
 nav li {
     display: inline-block;
@@ -39,7 +97,7 @@ nav li {
     padding: 0.5em 1em;
     /*background-color: rgb(237, 237, 237);*/
     /* top & bottom, left & right margins around elements */
-    margin: 1.2em 1em;
+    margin: 1.4em 1em;
     /* bottom and left shadows */
     /*box-shadow: grey -0.1em 0.1em;*/
     /*transition: 1 sec;*/
@@ -47,10 +105,11 @@ nav li {
 
 nav li a {
     text-decoration: none;
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-family: Helvetica;
+    /*text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;*/
 }
 
 nav li a:hover {
-    color: white;
+    color: rgb(211, 211, 211)
 }
