--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -166,6 +166,176 @@ nav li a:hover {
     transition: background 0s;
 }
 
+.about-weka {
 
+
+}
+
+.weka-intro {
+    position: absolute;
+    top: 280px;
+    left: 0;
+    right: 0;
+    font-size: 28px;
+    font-weight: 550;
+    bottom: 0;
+    width: 800px;
+    margin: auto;
+    text-align: center;
+
+}
+
+.background {
+    filter:alpha(opacity=40);
+    -moz-opacity:0.4;
+    -khtml-opacity: 0.4;
+    opacity: 0.4;
+    width: 100%;
+    height: 600px;
+}
+
+.box{
+    margin: 50px;
+
+    position:relative;
+    width: 300px;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #060c21;
+}
+.box:before {
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    background: #fff;
+    z-index:-1;
+
+}
+.box:after {
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    background: #fff;
+    z-index:-1;
+    filter:blur(40px);
+
+}
+.box:before,
+.box:after{
+    background: linear-gradient(235deg,#89ff00,#060c21,#00bcd4);
+}
+.content{
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-bottom: 40px;
+    box-sizing:border-box;
+    color:#fff;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align:center
+}
+
+.content2{
+    box-sizing:border-box;
+    color:#fff;
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-bottom: 90px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align:center
+}
+
+.box2{
+    margin: 50px;
+    position:relative;
+    width: 300px;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #060c21;
+}
+.box2:before {
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    background: #fff;
+    z-index:-1;
+
+}
+.box2:after {
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    background: #fff;
+    z-index:-1;
+    filter:blur(40px);
+
+}
+.box2:before,
+.box2:after{
+    background: linear-gradient(235deg,#e37bb2,#060c21,#a70dc6);
+}
+
+.box3{
+    margin: 50px;
+
+    position:relative;
+    width: 300px;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #060c21;
+}
+.box3:before {
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    background: #fff;
+    z-index:-1;
+
+}
+.box3:after {
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    background: #fff;
+    z-index:-1;
+    filter:blur(40px);
+
+}
+.box3:before,
+.box3:after{
+    background: linear-gradient(235deg,#89ff00,#060c21,#00bcd4);
+}
+
+.more{
+    margin:0;
+    padding:20px;
+    display: flex;
+    min-height:30vh;
+    justify-content: center;
+    font-family: Acanthus;
+}
 
 
