--- a/Frontend/react_app/src/Pages/classify-style.css
+++ b/Frontend/react_app/src/Pages/classify-style.css
@@ -4,10 +4,11 @@
 /*    padding: 2em;*/
 /*}*/
 
+
 form {
     background-color: #ddddddeb;
     box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial;
     padding: 2em;
     margin: 5em;
     border-radius: 0.4em;
@@ -19,16 +20,42 @@ form {
     word-spacing: 0em;
 }
 
-.classify-content h1 {
-    /*font-size: larger;*/
-    font-size: 40px;
-}
+/*.classify-content  {*/
+/*    !*font-size: larger;*!*/
+/*    font-size: 40px;*/
+/*}*/
 
 .matrix-table {
    margin: 0;
-   font-size: 16.7px;
+   font-size: 18px;
 }
 
 .matrix-table td {
     padding: 0.5em;
 }
+
+.classify-content {
+    margin-bottom: 20.6em;
+}
+
+.classify-summary {
+    text-align: left;
+    margin-left: 36em;
+    line-height: 1.2;
+    word-spacing: 0.3em;
+    font-family: Arial;
+}
+
+h2 {
+    font-size: 31px;
+    color: rgb(55, 41, 185);
+}
+
+/*.classify-summary h3 {*/
+/*    font-size: 18px;*/
+/*}*/
+
+/*.details-summary {*/
+/*    margin-left: 36em;*/
+/*    font-family: Arial;*/
+/*}*/
