--- a/Frontend/react_app/src/Pages/style.css
+++ b/Frontend/react_app/src/Pages/style.css
@@ -61,6 +61,7 @@
 .file-upload {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 0;
 }
 
 /*.data-summary {*/
@@ -77,6 +78,7 @@
     line-height: 1.2;
     word-spacing: 0.3em;
     font-family: Arial;
+    margin-bottom: 4em;
 }
 
 .data-summary h3 {
@@ -90,7 +92,7 @@
     width: 100%;
     grid-area: footer;
     background: rgb(55, 41, 185);
-    margin-top: 12em;
+    margin-top: 7.3em;
     margin-bottom: 0;
 }
 
