--- a/Frontend/react_app/src/Pages/contact-style.css
+++ b/Frontend/react_app/src/Pages/contact-style.css
@@ -1,13 +1,14 @@
 
-.contact input[type=text], select, textarea {
-    width: 100%; /* Full width */
-    padding: 12px; /* Some padding */
-    border: 1px solid #ccc; /* Gray border */
-    border-radius: 4px; /* Rounded borders */
-    box-sizing: border-box; /* Make sure that padding and width stays in place */
-    margin-top: 6px; /* Add a top margin */
-    margin-bottom: 16px; /* Bottom margin */
-    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+.contact input[type=text], textarea {
+    width: 400%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+
 }
 
 .contact input[type=submit] {
@@ -19,6 +20,11 @@
     cursor: pointer;
 }
 
+.contact .body{
+font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+}
+
 .contact input[type=submit]:hover {
     background-color: #89a3e5;
 }
@@ -27,3 +33,6 @@
     border-radius: 5px;
     padding: 20px;
 }
+
+
+
