--- a/Frontend/react_app/src/Pages/contact-style.css
+++ b/Frontend/react_app/src/Pages/contact-style.css
@@ -1,18 +1,6 @@
 
-.contact input[type=text], textarea {
-    width: 400%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical;
-
-}
-
 .contact input[type=submit] {
-    background-color: #0433aa;
+    background-color: rgb(55, 41, 185);
     color: white;
     padding: 12px 20px;
     border: none;
@@ -20,19 +8,93 @@
     cursor: pointer;
 }
 
-.contact .body{
-font-family: Arial, Helvetica, sans-serif;
-    box-sizing: border-box;
-}
-
 .contact input[type=submit]:hover {
     background-color: #89a3e5;
 }
 
-.contact .container {
-    border-radius: 5px;
-    padding: 20px;
+.contact {
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
 }
 
+.contact .container {
+    width: 80%;
+    margin: 50px auto;
+}
 
+.contact .contact-box{
+    background: #fff;
+    display: flex;
+}
 
+.contact .contact-left{
+    flex-basis: 60%;
+    padding: 40px 60px;
+    background: #ffffff;
+}
+
+.contact form{
+    width: 100%;
+    margin: 50px auto;
+}
+
+.contact .contact-right{
+    flex-basis: 40%;
+    padding: 40px;
+    background: #ffffff;
+}
+
+.contact h1{
+    margin-bottom: 10px;
+}
+
+.contact .container p{
+    /*margin-bottom: 40px;*/
+}
+
+.contact .input-row{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.contact .input-group{
+    flex-basis: 45%;
+}
+
+.contact .container input[type=text] {
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    outline: none;
+    padding-bottom: 5px;
+}
+
+.contact .container label{
+    margin-bottom: 6px;
+    display: block;
+}
+
+.contact textarea{
+    width: 100%;
+    border: 1px solid #ccc;
+    outline: none;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.contact label{
+    margin-bottom: 6px;
+    display: block;
+}
+
+.contact tr td{
+    text-align: left;
+    vertical-align: middle;
+
+}
+
+.contact table{
+    width: 100%;
+    margin: 50px auto;
+}
