--- a/Frontend/react_app/src/Pages/help-style.css
+++ b/Frontend/react_app/src/Pages/help-style.css
@@ -1,3 +1,4 @@
+
 .help .helpContent {
     font-size: 20px;
     text-align: center;
@@ -20,7 +21,7 @@
 }
 
 .help {
-    min-height: 100vh;
+    margin-bottom: 26em;
 }
 
 .help .content-three{
